@@ -29,6 +29,9 @@ Trunk (unreleased changes)
 
   IMPROVEMENTS
 
+    HIVE-194. Support specifying decimal places for ROUND function.
+    (David Phillips via zshao)
+
     HIVE-177. Allow specifying custom input and output format in CREATE TABLE.
     (David Phillips via zshao)
 
